# nirikiri

./: .gitignore  Cargo.toml  README.md
.github/workflows/: build.yml
src/: app.rs  category.rs  main.rs  message.rs
src/config/: appearance_parser.rs  appearance_writer.rs  keybindings_parser.rs  keybindings_writer.rs  mod.rs  parser.rs  writer.rs
src/ipc/: client.rs  mod.rs
src/model/: appearance.rs  config.rs  keybindings.rs  mod.rs  output.rs
src/update/: keybindings_update.rs  mod.rs  output_update.rs
src/view/: appearance_detail.rs  appearance_edit.rs  appearance_list.rs  keybinding_detail.rs  keybinding_edit.rs  keybindings_list.rs  mod.rs  output_list.rs  output_view.rs  status_bar.rs  tab_bar.rs
src/widgets/: mod.rs  monitor_canvas.rs
